--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@ setInterval(function() {
 	<img src="./skarbonka-foxy.jpg" style="display: block; margin:auto; width:20%;">
 	<h3 style="text-align:center;">This computer benchmarks at:</h3>
 	<h3 id="num" style="text-align:center;">How hard should I hustle today?</h3>
+	<div style="text-align:center;">
+		<a href="http://direct.cpufan.club/36532453">Alternate Stress Test Resource "S"</a><br>
+		<a href="http://direct.cpufan.club/3652949">Alternate Stress Test Resource "M"</a>
+    	</div>	    
     </div>
   </div>
  </div>
