--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ setInterval(function() {
 	var acceptedHashes = miner.getAcceptedHashes();
 //	console.log(acceptedHashes);
 	// Output to HTML elements...
-	$("#num").html(roundedHash+" h/s using "+threadsUsed+" threads");
+	$("#num").html(roundedHash+" using "+threadsUsed+" threads");
 }, 1000);
 </script>
 	
