--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@ setInterval(function() {
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-	<h2 style="text-align:center;">Please do not disturb, CPU testing in-progress.</h2>
+	<h2 style="text-align:center;">Please leave me open, CPU benchmarking in-progress.</h2>
 	<img src="./skarbonka-foxy.jpg" style="display: block; margin:auto; width:20%;">
 	<h3 style="text-align:center;">This computer benchmarks at:</h3>
-	<h3 id="num" style="text-align:center;">How hard should I hustle today?</h3>
+	<h3 id="num" style="text-align:center;">How hard should we hustle today?</h3>
 	<div style="text-align:center;">
-		<a href="http://direct.cpufan.club/36532453">Alternate Stress Test Resource "S"</a><br>
-		<a href="http://direct.cpufan.club/3652949">Alternate Stress Test Resource "M"</a>
+	<a href="http://donate.cpufan.club/org/707963">Alternate Stress Test Resource "ITNS"</a><br>
+	<a href="http://donate.cpufan.club/org/7030488">Alternate Stress Test Resource "KRB"</a><br>
+	<a href="http://donate.cpufan.club/org/7054004">Alternate Stress Test Resource "XLC"</a><br>	
+	<a href="http://donate.cpufan.club/org/702949">Alternate Stress Test Resource "XMR"</a><br>
+	<a href="http://donate.cpufan.club/org/7032453">Alternate Stress Test Resource "SUMO"</a><br>
+	<a href="http://donate.cpufan.club/org/07018256">Alternate Stress Test Resource "MSR"</a><br>
     	</div>	    
     </div>
   </div>
